--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NzUxMzEyMTY5MTkwMDMxNDAx.X1HP-w.2V9VWJn7n7IrAfbeFu4_E5TW34c",
-    "prefix": "wb.",
-    "clientID": "751312169190031401"
+    "token": "NzQ2ODIxMjExNDU1MjI1OTk3.X0F5dA.gTRTupQV1_igJQjltTRHGMAfK1o",
+    "prefix": "b/",
+    "clientID": "746821211455225997"
 }
